Set header layout

--- a/src/assets/sass/_variables.sass
+++ b/src/assets/sass/_variables.sass
@@ -3,3 +3,7 @@
 // typography
 $Sans-Serif: 'Open Sans', sans-serif
 $Serif: 'Cormorant Garamond', serif
+
+// Responsiveness
+$desktop: 751px
+$mobile: 750px
