Set basic porfolio layout

--- a/src/assets/sass/_variables.sass
+++ b/src/assets/sass/_variables.sass
@@ -7,3 +7,10 @@ $Serif: 'Cormorant Garamond', serif
 // Responsiveness
 $desktop: 751px
 $mobile: 750px
+
+// Colors
+$color-1: #197278
+$color-2: #50514F
+$color-3: #BE5A4E
+$color-4: #E3B505
+$color-5: #221D23
