--- a/src/assets/sass/base.sass
+++ b/src/assets/sass/base.sass
@@ -15,10 +15,13 @@
 
 
 #app
-  display: flex
-  flex-wrap: wrap
+  margin-left: 15vw
+  margin-right: 15vw
   justify-content: center
   padding-top: 20px
+  @media only screen and (max-width: $desktop)
+    margin-left: 2vw
+    margin-right: 2vw
 .container
   width: 70vw
   @media only screen and (max-width: $desktop)
@@ -34,6 +37,7 @@
 .top-bar
   display: flex
   flex-wrap: wrap
+  height: 8vh
   h1
     font-size: 220%
     @media only screen and (max-width: $desktop)
@@ -47,8 +51,9 @@
     left: calc(50% - 30px)
     top: 20vh
 .hello
-  height: 50vh
+  height: 68vh
   p
+    margin-top: 4em
     margin-left: 50px
     margin-right: 50px
 
@@ -56,4 +61,34 @@
   @media only screen and (min-width: $desktop)
       position: absolute
       right: 15vw
-      top: 60vh
+      top: 93vh
+
+.portfolio
+  h2
+    position: relative
+    top: 7vh
+    font-size: 440%
+    @media only screen and (max-width: $desktop)
+      font-size: 300%
+  .works
+    width: 100%
+    display: flex
+    flex-wrap: wrap
+    .work-box
+      width: 50%
+      height: 40vh
+      background: $color-1
+
+
+
+// Theme
+.txt1
+  color: $color-1
+.txt2
+  color: $color-2
+.txt3
+  color: $color-3
+.txt4
+  color: $color-4
+.txt5
+  color: $color-5
