--- a/src/assets/sass/base.sass
+++ b/src/assets/sass/base.sass
@@ -68,16 +68,56 @@
     position: relative
     top: 7vh
     font-size: 440%
+    z-index: 2
     @media only screen and (max-width: $desktop)
       font-size: 300%
+      top: 6vh
   .works
     width: 100%
     display: flex
     flex-wrap: wrap
     .work-box
+      position: relative
       width: 50%
       height: 40vh
-      background: $color-1
+      background-size: cover !important
+      transition: all .4s
+      transition-delay: .1s
+      @media only screen and (max-width: $desktop)
+        width: 100%
+      &:hover
+        -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,1)
+        -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,1)
+        box-shadow: 0px 0px 5px 0px rgba(0,0,0,1)
+      &:hover:nth-child(2n)
+        transform: translate3d(10px, -10px, 0)
+      &:hover
+        transform: translate3d(-10px, -10px, 0)
+      .work-bg
+        width: 100%
+        height: 100%
+        position: absolute
+        top: 0
+      .title
+        position: absolute
+        top: 0
+        z-index: 2
+        font-size: 320%
+        font-weight: 400
+        font-family: $Serif
+        color: white
+        margin-top: 20px
+        transition: all .2s
+        margin-left: .7em
+      .description
+        position: absolute
+        bottom: 0
+        right: -20px
+        margin-right: 40px
+        color: white
+        text-align: right
+        max-width: 75%
+        font-size: 90%
 
 
 
