--- a/src/assets/sass/_variables.sass
+++ b/src/assets/sass/_variables.sass
@@ -9,8 +9,8 @@ $desktop: 751px
 $mobile: 750px
 
 // Colors
-$color-1: #197278
-$color-2: #50514F
-$color-3: #BE5A4E
-$color-4: #E3B505
-$color-5: #221D23
+$color-1: rgb(25, 114, 120)
+$color-2: rgb(81, 82, 80)
+$color-3: rgb(190, 90, 78)
+$color-4: rgb(227, 181, 5)
+$color-5: rgb(33, 29, 34)
