--- a/src/assets/sass/base.sass
+++ b/src/assets/sass/base.sass
@@ -19,6 +19,7 @@
   margin-right: 15vw
   justify-content: center
   padding-top: 20px
+  padding-bottom: 40px
   @media only screen and (max-width: $desktop)
     margin-left: 2vw
     margin-right: 2vw
@@ -53,9 +54,12 @@
 .hello
   height: 68vh
   p
+    font-size: 140%
+    line-height: 140%
     margin-top: 4em
     margin-left: 50px
     margin-right: 50px
+    width: 100%
 
 .menu-button
   @media only screen and (min-width: $desktop)
@@ -63,7 +67,7 @@
       right: 15vw
       top: 93vh
 
-.portfolio
+.wraper
   h2
     position: relative
     top: 7vh
@@ -71,28 +75,31 @@
     z-index: 2
     @media only screen and (max-width: $desktop)
       font-size: 300%
-      top: 6vh
-  .works
+      top: 5vh
+  .boxes
     width: 100%
     display: flex
     flex-wrap: wrap
-    .work-box
+    .box
+      line-height: inherit
       position: relative
       width: 50%
       height: 40vh
       background-size: cover !important
+      background-position: center !important
       transition: all .4s
       transition-delay: .1s
       @media only screen and (max-width: $desktop)
         width: 100%
-      &:hover
+      &:not(.nohover):hover
         -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,1)
         -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,1)
         box-shadow: 0px 0px 5px 0px rgba(0,0,0,1)
-      &:hover:nth-child(2n)
-        transform: translate3d(10px, -10px, 0)
-      &:hover
-        transform: translate3d(-10px, -10px, 0)
+      @media only screen and (min-width: $desktop)
+        &:hover:nth-child(2n)
+          transform: translate3d(10px, -10px, 0)
+        &:hover
+          transform: translate3d(-10px, -10px, 0)
       .work-bg
         width: 100%
         height: 100%
@@ -105,10 +112,18 @@
         font-size: 320%
         font-weight: 400
         font-family: $Serif
+        line-height: 100%
         color: white
         margin-top: 20px
-        transition: all .2s
+        transition: all .6s
         margin-left: .7em
+        @media only screen and (max-width: $desktop)
+          left: -20px
+      .title-bottom
+        @extend .title
+        bottom: 10px !important
+        top: inherit
+        right: 40px
       .description
         position: absolute
         bottom: 0
@@ -118,8 +133,24 @@
         text-align: right
         max-width: 75%
         font-size: 90%
+      .description-left
+        @extend .description
+        top: 40px
+        left: 40px
+        text-align: left
+        @media only screen and (max-width: $desktop)
+          left: 20px
+          top: 20px
+    .box-tall
+      @extend .box
+      height: 60vh
 
-
+.me
+  @media only screen and (max-width: $desktop)
+   order: 0
+.about
+  @media only screen and (max-width: $desktop)
+   order: 2
 
 // Theme
 .txt1
@@ -132,3 +163,15 @@
   color: $color-4
 .txt5
   color: $color-5
+.bg1
+  background: $color-1
+.bg2
+  background: $color-2
+.bg2
+  background: $color-2
+.bg3
+  background: $color-3
+.bg4
+  background: $color-4
+.bg5
+  background: $color-5
