--- a/src/assets/sass/base.sass
+++ b/src/assets/sass/base.sass
@@ -12,7 +12,8 @@
     display: none !important
 
 
-
+a
+  color: white
 
 #app
   margin-left: 15vw
@@ -87,19 +88,22 @@
       height: 40vh
       background-size: cover !important
       background-position: center !important
-      transition: all .4s
-      transition-delay: .1s
+      transition: all .6s
+      overflow: hidden
       @media only screen and (max-width: $desktop)
         width: 100%
-      &:not(.nohover):hover
-        -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,1)
-        -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,1)
-        box-shadow: 0px 0px 5px 0px rgba(0,0,0,1)
+        height: 70vh
+        margin-bottom: 10px
+      &:not(.noHover):hover
       @media only screen and (min-width: $desktop)
-        &:hover:nth-child(2n)
-          transform: translate3d(10px, -10px, 0)
         &:hover
-          transform: translate3d(-10px, -10px, 0)
+          .title
+            bottom: 35%
+            background: black
+          .description-wraper
+            bottom: 0
+          #show-modal
+            opacity: 1
       .work-bg
         width: 100%
         height: 100%
@@ -107,37 +111,41 @@
         top: 0
       .title
         position: absolute
-        top: 0
+        bottom: 1%
         z-index: 2
-        font-size: 320%
+        font-size: 220%
         font-weight: 400
         font-family: $Serif
         line-height: 100%
         color: white
         margin-top: 20px
         transition: all .6s
-        margin-left: .7em
+        padding: .7em
         @media only screen and (max-width: $desktop)
-          left: -20px
+          bottom: 29%
+          background: black
       .title-bottom
         @extend .title
         bottom: 10px !important
         top: inherit
         right: 40px
       .description-wraper
-        width: 100%
-        height: 25%
-        padding: 40px
+        padding: 20px
+        min-height: 22%
         position: absolute
-        bottom: 0
+        bottom: -100px
         background: rgba(253, 253, 253, 0.87)
+        transition: all .6s
+        @media only screen and (max-width: $desktop)
+          bottom: 0
         .description
           right: -20px
           margin-right: 40px
           color: white
-          max-width: 75%
+          max-width: 95%
           font-size: 90%
           color: $color-5
+          margin-bottom: 0
         .description-left
           @extend .description
           top: 40px
@@ -146,6 +154,11 @@
           @media only screen and (max-width: $desktop)
             left: 20px
             top: 20px
+      #show-modal
+        cursor: pointer
+        opacity: 0
+        transition: all .6s
+        transition-delay: .3s
     .box-tall
       @extend .box
       height: 60vh
@@ -156,6 +169,8 @@
 .about
   @media only screen and (max-width: $desktop)
    order: 2
+
+
 
 // Theme
 .txt1
