--- a/src/assets/sass/base.sass
+++ b/src/assets/sass/base.sass
@@ -51,7 +51,7 @@ a
     margin:  0 auto
     position: absolute
     left: calc(50% - 30px)
-    top: 20vh
+    top: 28vh
 .hello
   height: 68vh
   p
@@ -123,6 +123,7 @@ a
         transition: all .6s
         padding: .7em
         @media only screen and (max-width: $desktop)
+          font-size: 180%
           bottom: 29%
           background: black
       .title-bottom
@@ -137,8 +138,10 @@ a
         bottom: -18px
         opacity: 0
         transition: all .6s
+        transition-delay: .2s
         @media only screen and (max-width: $desktop)
           bottom: 0
+          opacity: 1
         .description
           right: -20px
           margin-right: 40px
@@ -164,7 +167,10 @@ a
       @extend .box
       height: 60vh
 
-
+.modal-title
+  margin-top: 0
+  font-size: 230%
+  color: white
 .bombka
   width: 100%
   height: 40vh
