--- a/src/assets/sass/base.sass
+++ b/src/assets/sass/base.sass
@@ -34,12 +34,14 @@ a
 .flex-center
   display: flex
   align-items: center
+.flex-end
+  display: flex
+  justify-content: flex-end
 
 
 .top-bar
   display: flex
   flex-wrap: wrap
-  height: 8vh
   h1
     font-size: 220%
     @media only screen and (max-width: $desktop)
@@ -53,20 +55,21 @@ a
     left: calc(50% - 30px)
     top: 28vh
 .hello
-  height: 68vh
+  height: 66vh
+  width: 100%
+  display: flex
+  justify-content: space-between
   p
-    font-size: 140%
+    font-size: 120%
     line-height: 140%
     margin-top: 4em
-    margin-left: 50px
-    margin-right: 50px
-    width: 100%
+    width: 55%
 
 .menu-button
   @media only screen and (min-width: $desktop)
       position: absolute
       right: 15vw
-      top: 93vh
+      top: 23vh
 
 .wraper
   h2
@@ -122,6 +125,7 @@ a
         margin-top: 20px
         transition: all .6s
         padding: .7em
+        padding-top: .2em
         @media only screen and (max-width: $desktop)
           font-size: 180%
           bottom: 29%
