--- a/src/assets/sass/base.sass
+++ b/src/assets/sass/base.sass
@@ -179,6 +179,7 @@ a
   width: 100%
   height: 40vh
   background-size: cover !important
+  background-position: center !important
 
 .me
   @media only screen and (max-width: $desktop)
