add carousel component to modal

--- a/src/assets/sass/base.sass
+++ b/src/assets/sass/base.sass
@@ -188,7 +188,9 @@ a
   @media only screen and (max-width: $desktop)
    order: 2
 
-
+.VueCarousel-pagination
+  position: absolute
+  top: 84%
 
 // Theme
 .txt1
