--- a/src/assets/sass/base.sass
+++ b/src/assets/sass/base.sass
@@ -13,7 +13,7 @@
 
 
 a
-  color: white
+  color: $color-4
 
 #app
   margin-left: 15vw
@@ -179,7 +179,7 @@ a
 .modal-title
   margin-top: 0
   font-size: 150%
-  color: white
+  color: black
 .bombka
   width: 100%
   height: auto
