--- a/docs/src/assets/sass/_typography.sass
+++ b/docs/src/assets/sass/_typography.sass
@@ -1,6 +1,6 @@
 // main: base.sass
 @import url('https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,400i,500i,700,700i|Open+Sans:300,400,400i,700')
-
+@import url('https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:400,700')
 body
   font-family: $Sans-Serif
 .serif
@@ -9,8 +9,12 @@ body
     font-size: 115%
 .sans-serif
   font-family: $Sans-Serif
+.Barlow
+  font-family: 'Barlow Semi Condensed', sans-serif
 .center-txt
   text-align: center
+.justify-txt
+  text-align: justify
 
 
 html, .root
